--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.1.0",
     "@strapi/plugin-graphql": "^5.1.0",
+    "@strapi/plugin-seo": "^2.0.1-rc.1",
     "@strapi/plugin-users-permissions": "5.1.0",
     "@strapi/provider-upload-aws-s3": "^5.1.0",
     "@strapi/strapi": "5.1.0",
