--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "5.4.1",
     "@strapi/provider-upload-aws-s3": "^5.1.0",
     "@strapi/strapi": "5.4.1",
+    "dayjs-with-plugins": "^1.0.4",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
