feat: add placeholder plugin configuration and placeholder field to song schema

--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@strapi/plugin-users-permissions": "5.4.1",
     "@strapi/provider-upload-aws-s3": "^5.1.0",
     "@strapi/strapi": "5.4.1",
-    "strapi-plugin-placeholder": "github:Gaylord-Julien/strapi-plugin-placeholder#main",
+    "dayjs": "^1.11.13",
     "dayjs-with-plugins": "^1.0.4",
     "pg": "8.8.0",
     "plaiceholder": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "sharp": "^0.34.1",
+    "strapi-plugin-placeholder": "github:Gaylord-Julien/strapi-plugin-placeholder#main",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
